--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.14.0",
     "jwt-decode": "^3.1.2",
     "next": "13.0.5",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
